tests/invalid/Remainder_Invalid_3.whiley
function f(real x, real y) -> int:
    return x % y
